--- a/test/test_config.h.in
+++ b/test/test_config.h.in
@@ -5,6 +5,10 @@
 #define PROJECT_BUILD_PATH "${PROJECT_BINARY_DIR}"
 #define IGN_RENDERING_TEST_PLUGIN_PATH "${CMAKE_BINARY_DIR}/lib"
 
+#cmakedefine HAVE_OGRE
+#cmakedefine HAVE_OGRE2
+#cmakedefine HAVE_OPTIX
+
 /// \brief Helper macro to instantiate gtest for different engines
 #define RENDER_ENGINE_VALUES ::testing::ValuesIn(\
     gz::rendering::TestValues())
@@ -13,7 +17,16 @@
 #ifdef __APPLE__
 static const std::vector<const char *> kRenderEngineTestValues{"ogre", "optix"};
 #else
-static const std::vector<const char *> kRenderEngineTestValues{"ogre2", "optix"};
+  const std::vector<const char *> kRenderEngineTestValues;
+  #ifdef HAVE_OGRE
+  kRenderEngineTestValues.push_bash("ogre");
+  #endif
+  #ifdef HAVE_OGRE2
+  kRenderEngineTestValues.push_bash("ogre2");
+  #endif
+  #ifdef HAVE_OPTIX
+  kRenderEngineTestValues.push_back("optix");
+  #endif
 #endif
 
 #include <vector>
