--- a/test/test_config.h.in
+++ b/test/test_config.h.in
@@ -13,24 +13,25 @@
 #define RENDER_ENGINE_VALUES ::testing::ValuesIn(\
     gz::rendering::TestValues())
 
+#include <vector>
+#include <gz/common/Util.hh>
+
 /// \todo(anyone) re-enable ogre2 test once ogre 2.2 works on macOS
 #ifdef __APPLE__
 static const std::vector<const char *> kRenderEngineTestValues{"ogre", "optix"};
 #else
-  const std::vector<const char *> kRenderEngineTestValues;
+  std::vector<const char *> kRenderEngineTestValues;
   #ifdef HAVE_OGRE
-  kRenderEngineTestValues.push_bash("ogre");
+  kRenderEngineTestValues.push_back("ogre");
   #endif
   #ifdef HAVE_OGRE2
-  kRenderEngineTestValues.push_bash("ogre2");
+  kRenderEngineTestValues.push_back("ogre2");
   #endif
   #ifdef HAVE_OPTIX
   kRenderEngineTestValues.push_back("optix");
   #endif
 #endif
 
-#include <vector>
-#include <gz/common/Util.hh>
 
 namespace ignition
 {
