--- a/test/test_config.h.in
+++ b/test/test_config.h.in
@@ -17,12 +17,14 @@
 #ifdef __APPLE__
 static const std::vector<const char *> kRenderEngineTestValues{"ogre", "optix"};
 #else
+  /// We can not mix ogre and ogre2 tests in Fortress for a single test file
+  /// prefer here ogre2 over ogre.
   #if defined(HAVE_OGRE) && defined(HAVE_OPTIX) && defined(HAVE_OGRE2)
-  static const std::vector<const char *> kRenderEngineTestValues{"ogre", "ogre2", "optix"};
+  static const std::vector<const char *> kRenderEngineTestValues{"ogre2", "optix"};
   #elif defined(HAVE_OGRE) && defined(HAVE_OPTIX)
   static const std::vector<const char *> kRenderEngineTestValues{"ogre", "optix"};
   #elif defined(HAVE_OGRE) && defined(HAVE_OGRE2)
-  static const std::vector<const char *> kRenderEngineTestValues{"ogre", "ogre2"};
+  static const std::vector<const char *> kRenderEngineTestValues{"ogre2"};
   #elif defined(HAVE_OGRE2) && defined(HAVE_OPTIX)
   static const std::vector<const char *> kRenderEngineTestValues{"ogre2", "optix"};
   #elif defined(HAVE_OGRE)
