--- a/test/test_config.h.in
+++ b/test/test_config.h.in
@@ -15,14 +15,14 @@
 
 /// \todo(anyone) re-enable ogre2 test once ogre 2.2 works on macOS
 #ifdef __APPLE__
-static const std::vector<const char *> kRenderEngineTestValues{"ogre", "optix"};
+static const std::vector<const char *> kRenderEngineTestValues{"ogre"};
 #else
   #if defined(HAVE_OGRE) && defined(HAVE_OPTIX) && defined(HAVE_OGRE2)
-  static const std::vector<const char *> kRenderEngineTestValues{"ogre", "ogre2", "optix"};
+  static const std::vector<const char *> kRenderEngineTestValues{"ogre2", "optix"};
   #elif defined(HAVE_OGRE) && defined(HAVE_OPTIX)
   static const std::vector<const char *> kRenderEngineTestValues{"ogre", "optix"};
   #elif defined(HAVE_OGRE) && defined(HAVE_OGRE2)
-  static const std::vector<const char *> kRenderEngineTestValues{"ogre", "ogre2"};
+  static const std::vector<const char *> kRenderEngineTestValues{"ogre2"};
   #elif defined(HAVE_OGRE2) && defined(HAVE_OPTIX)
   static const std::vector<const char *> kRenderEngineTestValues{"ogre2", "optix"};
   #elif defined(HAVE_OGRE)
