abi compatibility changes, add test
Signed-off-by: Ian Chen <ichen@openrobotics.org>

--- a/test/common_test/CMakeLists.txt
+++ b/test/common_test/CMakeLists.txt
@@ -8,6 +8,7 @@ set(tests
   Camera_TEST
   Capsule_TEST
   COMVisual_TEST
+  FrustumVisual_TEST
   GaussianNoisePass_TEST
   GizmoVisual_TEST
   GlobalIllumination_TEST
