--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
       - 'ign-rendering[0-9]'
       - 'gz-rendering[1-9]?[0-9]'
       - 'main'
+      - 'iche033/normalmap_debug'
 
 jobs:
   noble-ci:
