--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,6 +108,7 @@ endif()
 set(OGRE2_COMPONENTS HlmsPbs HlmsUnlit PlanarReflections)
 if(USE_OGRE2_OVERLAY)
   list(APPEND OGRE2_COMPONENTS Overlay)
+  set(GZ_RENDERING_HAVE_OGRE2_OVERLAY TRUE)
 endif()
 
 gz_find_package(GzOGRE2 VERSION 2.3.1
